--- a/config/templates/label_map.config
+++ b/config/templates/label_map.config
@@ -17,7 +17,7 @@
 {% for item in items %}
 item {
     name: "{{ item.name }}"
-    id: "{{ item.id }}"
+    id: {{ item.id }}
     display_name: "{{ item.display_name }}"
 }
 {% endfor %}
