--- a/config/templates/object_detection.config
+++ b/config/templates/object_detection.config
@@ -136,7 +136,7 @@ model {
 }
 
 train_config: {
-  batch_size: 24
+  batch_size: 4
   optimizer {
     rms_prop_optimizer: {
       learning_rate: {
@@ -157,7 +157,7 @@ train_config: {
   # empirically found to be sufficient enough to train the pets dataset. This
   # effectively bypasses the learning rate schedule (the learning rate will
   # never decay). Remove the below line to train indefinitely.
-  num_steps: 200000
+  num_steps: {{ num_steps }}
   data_augmentation_options {
     random_horizontal_flip {
     }
@@ -184,7 +184,7 @@ eval_config: {
 
 eval_input_reader: {
   tf_record_input_reader {
-    input_path: "{{ eval_input_apth }}"
+    input_path: "{{ eval_input_path }}"
   }
   label_map_path: "{{ label_map_path }}"
   shuffle: false
