--- a/tfold/config/templates/faster_object_detection.config
+++ b/tfold/config/templates/faster_object_detection.config
@@ -91,10 +91,6 @@ model {
 }
 train_config {
   batch_size: 1
-  data_augmentation_options {
-    random_horizontal_flip {
-    }
-  }
   optimizer {
     momentum_optimizer: {
       learning_rate: {
@@ -115,8 +111,10 @@ train_config {
     use_moving_average: false
   }
   gradient_clipping_by_norm: 10.0
-  fine_tune_checkpoint: "{{ fine_tune_checkpoint }}"
-  from_detection_checkpoint: true
+  {% if fine_tune_checkpoint %}
+    fine_tune_checkpoint: "{{ fine_tune_checkpoint }}"
+    from_detection_checkpoint: true
+  {% endif %}
   num_steps: {{ num_steps }}
 }
 train_input_reader {
